--- a/src/components/BoardItem/BoardItem.scss
+++ b/src/components/BoardItem/BoardItem.scss
@@ -1,5 +1,7 @@
 .board_item {
     width: 90%;
+    height: auto;
+    max-height: 300px;
 
     background-color: #fff;
     border: 2px #000 solid;
