--- a/src/components/BoardItem/BoardItem.scss
+++ b/src/components/BoardItem/BoardItem.scss
@@ -1,11 +1,19 @@
 .board_item {
     width: 90%;
     height: auto;
-    max-height: 300px;
+    max-height: 200px;
 
     background-color: #fff;
     border: 2px #000 solid;
     border-radius: 8px;
 
     cursor: pointer;
+}
+
+.dragging {
+    opacity: 0.5;
+    border: 2px crimson solid;
+
+    width: 90%;
+    height: 200px;
 }
